# dadn-chill

./: .dockerignore  .editorconfig  .env.example  .gitignore  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  nx.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.base.json
.github/workflows/: build-publish-docker.yaml  lint-check.yaml
.metals/: metals.lock.db  metals.mv.db
ML/: build_model.ipynb  decision_tree.model
apps/ML-server/: Dockerfile  app.py  mqttSubscriber.py  test.json
apps/backend/: Dockerfile  project.json  tsconfig.spec.json
apps/backend-e2e/: jest.config.ts
apps/backend-e2e/src/backend/: Auth.spec.ts  REST_API.spec.ts  Statistics.spec.ts  backend.spec.ts
apps/backend-e2e/src/support/: test-setup.ts
apps/backend/data/: notification.sql  sensor-read-event.sql  sensor.sql  user.sql
apps/backend/doc/: swagger.yaml
apps/backend/experiment/: analysis_query.sql  results.md
apps/backend/src/: main.ts
apps/backend/src/assets/: index.html  swagger.yaml
apps/backend/src/core/: sensor.ts  sensorReadEvent.ts
apps/backend/src/infras/: BSLogger.ts  DomainRegistry.ts  DummySensorController.ts  EnvironmentVariable.ts  ExpressServer.spec.ts  ExpressServer.ts  InMemNotificationRepo.ts  InMemSensorRepo.ts  (+6 more)
apps/frontend/: Dockerfile  index.html  jest.config.ts  project.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vite.config.ts
apps/frontend/.jest/: setEnvVars.ts
docker/: mosquitto.conf
hardware/: __init__.py  gateway.py
hardware/tests/: test_version.py
(+139 files in other folders)
